# SkyRL

./: .gitignore  nsys.sh  pyproject.toml
examples/train/algorithms/maxrl/: run_maxrl_gsm8k.sh
examples/train/text_to_sql/: run_skyrl_sql.sh
profile/: check_reward.py  debug_cuda.py  output  prof_cpus.py  pyproject.toml  requirements.txt  viz.ipynb
skyrl-gym/skyrl_gym/envs/sql/: env.py
skyrl-train/: merge_profiles.py  nsys.sh  prof_gpus.py
skyrl/backends/skyrl_train/: training_batch.py
skyrl/backends/skyrl_train/distributed/: fsdp_strategy.py  fsdp_utils.py  strategy.py
skyrl/backends/skyrl_train/inference_engines/: inference_engine_client.py  utils.py
skyrl/backends/skyrl_train/inference_engines/vllm/: vllm_engine.py
skyrl/backends/skyrl_train/inference_servers/: remote_inference_client.py  server_group.py  server_pool.py  setup.py  vllm_router.py  vllm_server_actor.py
skyrl/backends/skyrl_train/utils/: memory_utils.py  profiler.py
skyrl/backends/skyrl_train/workers/: worker.py  worker_dispatch.py  worker_utils.py
skyrl/backends/skyrl_train/workers/fsdp/: fsdp_worker.py
skyrl/train/: trainer.py
skyrl/train/dataset/: dataset.py
skyrl/train/entrypoints/: main_base.py
skyrl/train/generators/: skyrl_gym_generator.py
skyrl/train/utils/: utils.py
