[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skyrl-profile"
version = "0.0.0"

dependencies = [
    "friendlywords",
    "joblib",
    "matplotlib",
    "numpy",
    "plotly",
    "matplotlib-inline",
    "nbformat",
    "jupyter",
]
